Fix skip link short visible.

--- a/src/styles/utilities/_utilities.skip-links.scss
+++ b/src/styles/utilities/_utilities.skip-links.scss
@@ -7,6 +7,7 @@
 .skip-link,
 %skip-link {
 	position: absolute;
+	top: -50vh;
 	left: 50%;
 	height: auto;
 	padding: rhythm(.25) rhythm(.5);
@@ -17,6 +18,7 @@
 	z-index: $z-index-alert;
 
 	&:focus {
+		top: 0;
 		transform: translateY(0%) translateX(-50%);
 	}
 
